[tool.poetry]
name = "python-coroutines"
version = "0.1.0"
description = ""
authors = ["Augusto Marinho <augusto.marinho@loggi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
psutil = "^5.9.5"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
locust = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
